src/cses/missing_number/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/missing_number/missing_number.cpp.
/Users/michael/repos/competitive-programming/src/cses/missing_number/missing_number.cpp:3:10: error: 'cstdint' file not found [clang-diagnostic-error]
    3 | #include <cstdint>
      |          ^~~~~~~~~
Found compiler error(s).
